частичное перераспределение стилей в sass

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
@@ -521,7 +522,7 @@
               class="policy-check visually-hidden"
             />
             <label for="policy" class="check-text">
-              <span>
+              <span class="policy-icon-span">
                 <svg class="policy-icon" width="16" height="15">
                   <use
                     href="images/icons.svg#icon-vectorgalochka"
