Добавляет вложенности и директивы

--- a/index.html
+++ b/index.html
@@ -175,29 +175,29 @@
               <div class="container-card">
                 <h3 class="team">Игорь Демьяненко</h3>
                 <p class="position">Product Designer</p>
-                <ul class="list card-icon-list">
-                  <li class="card-icon-item">
+                <ul class="list social-list">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="card-icon-item">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="card-icon-item">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="card-icon-item">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -217,29 +217,29 @@
               <div class="container-card">
                 <h3 class="team">Ольга Репина</h3>
                 <p class="position">Frontend Developer</p>
-                <ul class="list card-icon-list">
-                  <li class="card-icon-item">
+                <ul class="list social-list">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="card-icon-item">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="card-icon-item">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="card-icon-item">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -259,29 +259,29 @@
               <div class="container-card">
                 <h3 class="team">Николай Тарасов</h3>
                 <p class="position">Marketing</p>
-                <ul class="list card-icon-list">
-                  <li class="card-icon-item">
+                <ul class="list social-list">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="card-icon-item">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="card-icon-item">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="card-icon-item">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -301,29 +301,29 @@
               <div class="container-card">
                 <h3 class="team">Михаил Ермаков</h3>
                 <p class="position">UI Designer</p>
-                <ul class="list card-icon-list">
-                  <li class="card-icon-item">
+                <ul class="list social-list">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="card-icon-item">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="card-icon-item">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="card-icon-item">
+                  <li class="social-item">
                     <a class="card-icon-link link" href=""
                       ><svg class="card-icon-link-logo" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -420,29 +420,29 @@
         </div>
         <div class="container-footer-social">
           <p class="footer-text-title">присоединяйтесь</p>
-          <ul class="footer-social-list list">
-            <li class="footer-social-item">
+          <ul class="social-list list">
+            <li class="social-item">
               <a class="footer-icon-link link" href="/"
                 ><svg class="footer-icon-link-logo" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
+            <li class="social-item">
               <a class="footer-icon-link link" href="/"
                 ><svg class="footer-icon-link-logo" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
+            <li class="social-item">
               <a class="footer-icon-link link" href="/"
                 ><svg class="footer-icon-link-logo" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
+            <li class="social-item">
               <a class="footer-icon-link link" href="/"
                 ><svg class="footer-icon-link-logo" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
